# non-local-means-denoising

./: .gitignore  README.md
docs/: main.tex  references.bib
docs/sections/: abstract.tex  hashed_nlm.tex  intro.tex  kdtree-nlm.tex  mcnlm.tex  noise-estimation.tex
mcnlm/: README.md  env_test.py  pyproject.toml
mcnlm/imgs/: city.tiff  land.tiff
mcnlm/src/mcnlm/: analysis.py  comparison.py  env_test.py  hashnlm.py  hashnlm_viz.py  kdtree.py  main.py  mc_convergence.py  mc_nlm.py  naive_nlm.py  plots.py  utils.py  window_size_comparison.py
presentation/: main.fdb_latexmk  main.fls  main.tex
prototyping/: mcnlm.ipynb  naive_nlm.py
