[project]
name = "mcnlm"
version = "0.1.0"
description = ""
authors = [
    {name = "petru-robu",email = "petru.r.robu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numba (>=0.63.1,<0.64.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mcnlm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcnlm = "mcnlm.main:main"